--- a/index.html
+++ b/index.html
@@ -8,155 +8,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
-        integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <!-- Appel du fichier CSS -->
     <link rel="stylesheet" href="custom.css">
 </head>
 
-<body id="home" data-spy="scroll" data-offset="100">
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-12 d-flex flex-row justify-content-center">
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-12 d-flex flex-row justify-content-center">
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-12 d-flex flex-row justify-content-center">
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-12 d-flex flex-row justify-content-center">
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-12 d-flex flex-row justify-content-center">
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-12 d-flex flex-row justify-content-center">
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-12 d-flex flex-row justify-content-center">
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-12 d-flex flex-row justify-content-center">
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-12 d-flex flex-row justify-content-center">
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-12 d-flex flex-row justify-content-center">
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-                <div class="case"></div>
-            </div>
-        </div>
+<body>
+    <div class="row">
+        <div class="case y-1 x-1"></div>
+        <div class="case y-1 x-2"></div>
+        <div class="case caseBlock"></div>
+        <div class="case"></div>
+        <div class="case"></div>
+        <div class="case"></div>
+        <div class="case"></div>
+        <div class="case"></div>
+        <div class="case"></div>
+        <div class="case"></div>
+    </div>
+    <div class="row">
+        <div class="case y-2 x-1"></div>
+        <div class="case y-2 x-1"></div>
+        <div class="case"></div>
+        <div class="case"></div>
+        <div class="case"></div>
+        <div class="case"></div>
+        <div class="case"></div>
+        <div class="case"></div>
+        <div class="case"></div>
+        <div class="case"></div>
     </div>
 </body>
+
+<script src='./app.js'></script>
 
 </html>
