--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </head>
 
 <body>
-    <div class="row">
-    </div>
+    <div class="game"></div>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
