--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- CSS file -->
-    <link rel="stylesheet" href="custom.css">
+    <link rel="stylesheet" href="./custom.css">
 </head>
 
 <body>
