Ajout de la fonction coloCases - semi fonctionnelle

--- a/deplacement/index.html
+++ b/deplacement/index.html
@@ -27,16 +27,17 @@
             <div class="case x-5 y-2 empty"></div>
         </div>
         <div class="row">
-                <div class="case x-1 y-3 empty"></div>
-                <div class="case x-2 y-3 empty"></div>
-                <div class="case x-3 y-3 empty"></div>
-                <div class="case x-4 y-3 empty"></div>
-                <div class="case x-5 y-3 empty"></div>
+            <div class="case x-1 y-3 empty"></div>
+            <div class="case x-2 y-3 empty"></div>
+            <div class="case x-3 y-3 empty"></div>
+            <div class="case x-4 y-3 empty"></div>
+            <div class="case x-5 y-3 empty"></div>
         </div>
     </div>
 </body>
 
-<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous"></script>
 <script src='./app.js'></script>
 
 </html>
