Fonction surbrillance fonctionnelle

--- a/deplacement/index.html
+++ b/deplacement/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="game">
         <div class="row">
-            <div class="case x-1 y-1 empty player"></div>
+            <div class="case x-1 y-1 player"></div>
             <div class="case x-2 y-1 empty"></div>
             <div class="case x-3 y-1 empty"></div>
             <div class="case x-4 y-1 empty"></div>
