--- a/deplacement/index.html
+++ b/deplacement/index.html
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="case x-1 y-2 empty"></div>
             <div class="case x-2 y-2 empty"></div>
-            <div class="case x-3 y-2 empty"></div>
+            <div class="case x-3 y-2 player-2"></div>
             <div class="case x-4 y-2 empty"></div>
             <div class="case x-5 y-2 empty"></div>
         </div>
