--- a/game-oop/index.html
+++ b/game-oop/index.html
@@ -17,6 +17,8 @@
 <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 <script src='./game.js'></script>
 <script src='./board.js'></script>
+<script src='./players.js'></script>
+<script src='./weapons.js'></script>
 <script src='./app.js'></script>
 
 </html>
