--- a/game-oop/index.html
+++ b/game-oop/index.html
@@ -8,13 +8,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- CSS file -->
     <link rel="stylesheet" href="custom.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="game"></div>
+    <div class="container">
+        <div class="row col-md-12 d-flex flex-row">
+            <div class="col-md-3 col-sm-12 col-12">
+                <h1>how I <br>fight <br>your Bro</h1>
+            </div>
+            <div class="col-md-6 col-sm-12 col-12 d-flex row game"></div>
+            <div class="col-md-3 col-sm-12 col-12 flex-column d-flex">
+                <div class="mb-4">
+                    <img src="assets/tie-big.png">
+                    <span>Damage : 5</span>
+                </div>
+                <div class="mb-4">
+                    <img src="assets/umbrella-big.png">
+                    <span>Damage : 10</span>
+                </div>
+                <div class="mb-4">
+                    <img src="assets/blue-horn-big.png">
+                    <span>Damage : 15</span>
+                </div>
+                <div class="mb-4">
+                    <img src="assets/pineapple-big.png">
+                    <span>Damage : 20</span>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
 </body>
 
-<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous"></script>
 <script src='./game.js'></script>
 <script src='./board.js'></script>
 <script src="./game-attribute.js"></script>
