--- a/game-oop/index.html
+++ b/game-oop/index.html
@@ -10,16 +10,16 @@
     <link rel="stylesheet" href="custom.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Maven+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Maven+Pro&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
         <div class="row col-md-12 d-flex flex-row">
-            <div class="col-md-3 col-sm-12 col-12">
+            <div class="col-md-3 col-sm-12 col-12 d-flex justify-content-center">
                 <h1>how I <br>fight <br>your Bro</h1>
             </div>
-            <div class="col-md-6 col-sm-12 col-12 d-flex row game"></div>
+            <div class="col-md-6 col-sm-12 col-12 d-flex row justify-content-center game"></div>
             <div class="col-md-3 col-sm-12 col-12 flex-column d-flex">
                 <div class="mb-4">
                     <img src="assets/tie-big.png">
