--- a/game-oop/index.html
+++ b/game-oop/index.html
@@ -20,22 +20,22 @@
                 <h1>how I <br>fight <br>your Bro</h1>
             </div>
             <div class="col-md-6 col-sm-12 col-12 d-flex row justify-content-center game"></div>
-            <div class="col-md-3 col-sm-12 col-12 flex-column d-flex">
+            <div class="col-md-3 col-sm-12 col-12 flex-column d-flex align-vertical">
                 <div class="mb-4">
                     <img src="assets/tie-big.png">
-                    <span>Damage : 5</span>
-                </div>
-                <div class="mb-4">
-                    <img src="assets/umbrella-big.png">
                     <span>Damage : 10</span>
                 </div>
                 <div class="mb-4">
+                    <img src="assets/umbrella-big.png">
+                    <span>Damage : 20</span>
+                </div>
+                <div class="mb-4">
                     <img src="assets/blue-horn-big.png">
-                    <span>Damage : 15</span>
+                    <span>Damage : 20</span>
                 </div>
                 <div class="mb-4">
                     <img src="assets/pineapple-big.png">
-                    <span>Damage : 20</span>
+                    <span>Damage : 30</span>
                 </div>
 
 
