Switch weapon all players OK

--- a/game-oop/index.html
+++ b/game-oop/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>Jeu de plateau</title>
+    <title>How I Fight Your Bro</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,15 +10,22 @@
     <link rel="stylesheet" href="custom.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Maven+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Maven+Pro&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
         <div class="row col-md-12 d-flex flex-row">
-            <div class="col-md-3 col-sm-12 col-12 d-flex justify-content-center">
-                <h1>how I <br>fight <br>your Bro</h1>
+            <div class="col-md-3 col-sm-12 col-12 flex-column">
+                <div class="mb-5">
+                    <h1>how I <br>fight <br>your Bro</h1>
+                </div>
+                <div class="mb-4">
+                    <img src="assets/ted_full_size.png">
+                </div>
+                <img src="assets/barney_full_size.png">
             </div>
+
             <div class="col-md-6 col-sm-12 col-12 d-flex row justify-content-center game"></div>
             <div class="col-md-3 col-sm-12 col-12 flex-column d-flex align-vertical">
                 <div class="mb-4">
