--- a/game-oop/index.html
+++ b/game-oop/index.html
@@ -15,15 +15,39 @@
 
 <body>
     <div class="container">
-        <div class="row col-md-12 d-flex flex-row">
+        <div class="row col-md-12 flex-row">
             <div class="col-md-3 col-sm-12 col-12 flex-column">
                 <div class="mb-5">
                     <h1>how I <br>fight <br>your Bro</h1>
                 </div>
-                <div class="mb-4">
-                    <img src="assets/ted_full_size.png">
+                <div class="mb-4 pt-2 shadow rounded-lg d-flex flex-row">
+                    <div>
+                        <img src="assets/ted_full_size.png">
+                    </div>
+                    <div class="flex-column align-self-center">
+                        <div class="flex-row d-flex">
+                            <h6>Weapon : </h6>
+                            <img src="assets/tie.png">
+                        </div>
+                        <div>
+                            <h6>Health : 100</h6>
+                        </div>
+                    </div>
                 </div>
-                <img src="assets/barney_full_size.png">
+                <div class="pt-2 shadow rounded-lg d-flex flex-row">
+                    <div>
+                        <img src="assets/barney_full_size.png">
+                    </div>
+                    <div class="flex-column align-self-center">
+                        <div class="flex-row d-flex">
+                            <h6>Weapon : </h6>
+                            <img src="assets/tie.png">
+                        </div>
+                        <div>
+                            <h6>Health : 100</h6>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="col-md-6 col-sm-12 col-12 d-flex row justify-content-center game"></div>
@@ -44,8 +68,6 @@
                     <img src="assets/pineapple-big.png">
                     <span>Damage : 30</span>
                 </div>
-
-
             </div>
         </div>
     </div>
