--- a/game-oop/index.html
+++ b/game-oop/index.html
@@ -30,7 +30,7 @@
                             <img src="assets/tie.png">
                         </div>
                         <div>
-                            <h6>Health : 100</h6>
+                            <h6>Health : 100%</h6>
                         </div>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                             <img src="assets/tie.png">
                         </div>
                         <div>
-                            <h6>Health : 100</h6>
+                            <h6>Health : 100%</h6>
                         </div>
                     </div>
                 </div>
