--- a/game-oop/index.html
+++ b/game-oop/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <h1 id="toto">totoo</h1>
     <div class="container">
         <div class="row col-md-12 flex-row">
             <div class="col-md-3 col-sm-12 col-12 flex-column">
@@ -86,7 +87,7 @@
                         ...
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-secondary btn-close-modal" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
