--- a/game-oop/index.html
+++ b/game-oop/index.html
@@ -86,12 +86,13 @@
                         ...
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-secondary btn-close-modal" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary attack">Attaquer</button>
+                        <button type="button" class="btn btn-primary defend">Défendre</button>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 </body>
 
