méthode handleTurnBasePlayer() fonctionnelle

--- a/game-oop/index.html
+++ b/game-oop/index.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
         </div>
-        <!-- Modal -->
+        <!-- Modal Fight -->
         <div class="modal d-none" id="modalFight" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog" role="document">
@@ -88,6 +88,24 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary attack">Attaquer</button>
                         <button type="button" class="btn btn-primary defend">Défendre</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal End Game -->
+        <div class="modal d-none" id="modalEndGame" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Fight is over !!
+                        </h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        ...
                     </div>
                 </div>
             </div>
