test sur méthode handleWeaponSwitch() pour changer en front l'arme en possession du joueur lors du switch de weapon

--- a/game-oop/index.html
+++ b/game-oop/index.html
@@ -27,7 +27,7 @@
                     <div class="flex-column align-self-center">
                         <div class="flex-row d-flex">
                             <h6>Weapon : </h6>
-                            <img id="tedWeapon" src="assets/tie.png">
+                            <div id="tedWeapon" class="weaponTie"></div>
                         </div>
                         <div>
                             <h6>Health : 100%</h6>
@@ -41,7 +41,7 @@
                     <div class="flex-column align-self-center">
                         <div class="flex-row d-flex">
                             <h6>Weapon : </h6>
-                            <img id="BarneyWeapon" src="assets/tie.png">
+                            <div id="barneyWeapon" class="weaponTie"></div>
                         </div>
                         <div>
                             <h6>Health : 100%</h6>
@@ -49,7 +49,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-md-6 col-sm-12 col-12 d-flex row justify-content-center game"></div>
             <div class="col-md-3 col-sm-12 col-12 flex-column d-flex align-vertical">
                 <div class="mb-4">
