--- a/game-oop/index.html
+++ b/game-oop/index.html
@@ -74,19 +74,19 @@
             aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
-                    <div class="modal-header">
+                    <div class="modal-header justify-content-center">
                         <h5 class="modal-title" id="exampleModalLabel">A fight is coming, and it will be legendary !
                         </h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
                     </div>
                     <div class="modal-body">
-                        ...
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary attack">Attaquer</button>
-                        <button type="button" class="btn btn-primary defend">Défendre</button>
+                        <div class="d-flex flex-row justify-content-around">
+                            <img src="assets/ted_full_size.png" id="tedImg" class="">
+                            <img src="assets/barney_full_size.png" id="barneyImg" class="">
+                        </div>
+                        <div class="modal-footer justify-content-around">
+                            <button type="button" class="btn btn-primary attack">Attaquer</button>
+                            <button type="button" class="btn btn-primary defend">Défendre</button>
+                        </div>
                     </div>
                 </div>
             </div>
