Gif for winners

--- a/game-oop/index.html
+++ b/game-oop/index.html
@@ -107,10 +107,13 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">And the winner is</h5>
+                        <h5 id="modalWinner" class="modal-title">And the winner is</h5>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body d-flex justify-content-center">
                         <div id="winner"></div>
+                    </div>
+                    <div class="modal-footer justify-content-center mt-3">
+                        <button id="reload" type="button" class="btn btn-primary">Fight again</button>
                     </div>
                 </div>
             </div>
