--- a/game-oop/index.html
+++ b/game-oop/index.html
@@ -70,6 +70,9 @@
             </div>
         </div>
 
+        <!-- Goat -->
+        <img id="goat" src="assets/goat.png" />
+
         <!-- Modal Fight -->
         <div class="modal d-none" id="modalFight" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
@@ -124,7 +127,6 @@
 
 <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
-
 <script src='./fight.js'></script>
 <script src='./game.js'></script>
 <script src='./board.js'></script>
